--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "astro build",
     "preview2": "astro preview",
     "astro": "astro",
-    "preview": "astro build && wrangler dev"
+    "preview": "astro build && wrangler dev",
+        "deploy": "webflow cloud deploy",
+    "astro": "astro",
+    "cf-typegen": "wrangler types"
+
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.10",
     "@astrojs/preact": "^4.1.3",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "astro": "^5.15.5",
     "preact": "^10.27.2"
